chore: fix several issues
