# manager/docs/swagger.json
@@ -1074,15 +1074,6 @@
                         "name": "uuid",
                         "in": "path",
                         "required": true
-                    },
-                    {
-                        "description": "Delete Rpc request",
-                        "name": "rpc",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/DeleteRpcOptReq"
-                        }
                     }
                 ],
                 "responses": {
@@ -1558,14 +1549,6 @@
             "properties": {
                 "uuid": {
                     "type": "string"
-                }
-            }
-        },
-        "DeleteRpcOptReq": {
-            "type": "object",
-            "properties": {
-                "cascade_delete_upstream": {
-                    "type": "boolean"
                 }
             }
         },
